--- a/ch_conclusions.tex
+++ b/ch_conclusions.tex
@@ -1,7 +1,7 @@
 \chapter{Conclusions}\label{ch:conclusions}
 
 The purpose of this work was to analyze and explore how CDR data could be used as a surrogate to other, more traditional, methods of disease control and surveillance.
-This was done starting from the hypothesis that long-term migrations are relevant to the spread of the Chagas disease.
+This was done starting from the hypothesis that long-term migrations are relevant to the Chagas disease spread.
 We wanted to analyze people that moved from and to the regions of high vector-borne infections.
 From other works in the literature we understood that CDRs could be used for non business purposes and we took advantage of this by leveraging the georeferenced information contained in the CDR logs.
 In all, this work shows how the use of this data can help with the Chagas disease problem.
@@ -28,7 +28,7 @@ We showed that it was possible to build strong classifiers to detect, from those
 Next to traditional health control actions, this research may provide a very insightful piece of information for decision-makers.
 The insights derived from the probabilistic models provide insights into the disease spread and it might also provide a research line for  other diseases of similar characteristics.
 
-We carried expeirments which have shown there is evidence that Machine Learning helps in characterizing the fluxes of human migrations and disease spread.
+We carried experimenffts which have shown there is evidence that Machine Learning helps in characterizing the fluxes of human migrations and disease spread.
 %We think that capturing long-term human movements will also enable better simulations of disease spreads in different contexts.
 
 % The implications of the results previously stated argue that
@@ -61,7 +61,7 @@ This allowed us to find slight performance differences in these ensemble methods
 
 We also explored which feature categories were most relevant to the predictions in the ensemble algorithms, as selected by the ``best-features'' heuristic.
 
-Our findings slected the following feature categories as relevant:
+Our findings selected the following feature categories as relevant:
 \begin{enumerate*}[label={\alph*)},]
 \item the area of influence of the users, where large mobilities were indicative of past migrants, 
 \item interactions and calling patterns with vulnerable users, and
@@ -70,7 +70,7 @@ Our findings slected the following feature categories as relevant:
 
 %We find relevant to know that the ensemble learners realized the importance of attributes tagged with vulnerable behavior obtained from the CDR.\@
 
-% Combining social and geolocated information, the data at hand has been given an innovative use, different from its original billing purpose.
+% Combining social and geolocalized information, the data at hand has been given an innovative use, different from its original billing purpose.
 % in the preceding chapters to our tasks.
 % To conclude, the results presented in this work show that
 
@@ -86,7 +86,7 @@ At the moment, health experts from the Mundo Sano Foundation state that, in Arge
 These measures require costly infrastructures to set up and be run.
 
 On the other hand, this work provides a different point of view to the disease spread problem and it is built only on top of existing mobile networks.
-We know then that this analysis demands lower costs and taks advantage of the already available infrastructure.
+We know then that this analysis demands lower costs and takes advantage of the already available infrastructure.
 
 The potential value these results could add to health research is hereby exposed.
 Finally, the results stand as a proof of concept which can be extended to other countries or to diseases with similar characteristics.
