--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -103,7 +103,7 @@ We have no reason to believe that this dataset can provide such information with
 
 \section{Brief Introduction to Machine Learning}
 
-Machine learning is a subfield of computer science with broad \textit{theoretical} intersections with statistics and mathematical optimization. At the present time, it has a wide range of applications. A non-comprehensive list of its use includes self-driving cars, spam detection systems, face recognition, voice recognition, temperature prediction in weather, AI opponents in games, disease prediction in patients, text and audio language translation, stock pricing, movie recommendation systems, etc. Examples of these machine learning programs are now widespread to the point where their use today has a direct impact on the lives of millions of people. Due to this, machine learning has \textit{practical} intersections with data and software engineering.
+Machine learning is a subfield of computer science with broad \textit{theoretical} intersections with statistics and mathematical optimization. At the present time, it has a wide range of applications. A non-comprehensive list of its use includes self-driving cars, Spam detection systems, face and voice recognition, temperature prediction in weather, AI opponents in games, disease detection in patients, text and audio language translation, stock pricing, movie recommendation systems, etc. Examples of these machine learning programs are now widespread to the point where their use today has a direct impact on the lives of millions of people. Due to this, machine learning has \textit{practical} intersections with data and software engineering.
 
 ``A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P if its performance at tasks in T, as measured by P, improves with experience E'' (definition given by \cite{Mitchell-MLearning}). For our purposes it is clear though that this definition\footnote{Other authors might reference machine learning as \textit{statistical learning}. See~\cite{hastie-elemstatslearn} as an example.} is not formally well-defined. However it serves to convey the idea of algorithms that automatically \textit{learn} to do a specific task better over time and with more data. Note that the ``goodness'' of their performance is inherently subjected to the evaluation criteria chosen for the task. Because of this, the concept of \textit{learning} within this context is less associated with the cognitive definition and is related to an optimization based approach.
 
@@ -142,7 +142,7 @@ This region is considered as the endemic zone $E_Z$ in the analysis described in
 %\todo{add more references to examples of CDRs and chagas or other diseases}
 
 
-The dynamic interaction of the triatomine infested areas and the human mobility patterns create a difficult scenario to track down individuals or spots with high prevalence of infected people or transmission risk. Available methods of surveying the state of the Chagas disease in Argentina nowadays are limited to individual screenings of individuals. %The work described here is the first attempt to use mobile phone data to correlate migrations and cellphone usage to understand Chagas epidemic spatial structure. AS: WE ALREADY SAID THIS.
+The dynamic interaction of the triatomine infested areas and the human mobility patterns create a difficult scenario to track down individuals or spots with high prevalence of infected people or transmission risk. Available methods of surveying the Chagas disease state in Argentina nowadays are limited to individual screenings of individuals. %The work described here is the first attempt to use mobile phone data to correlate migrations and cellphone usage to understand Chagas epidemic spatial structure. AS: WE ALREADY SAID THIS.
 
 Recent national estimates indicate that there exist between 1.5 and 2 million individuals carrying the parasite, with more than seven million exposed. National health systems face many difficulties to effectively treat the disease.
 In Argentina, less than 1\% of infected people are diagnosed and treated
