--- a/ch_results.tex
+++ b/ch_results.tex
@@ -459,7 +459,7 @@ The table shows the best-fit classifier's performance across three scores on the
 
 %\begin{table*}\centering
 %%\hskip-4.0cm
-%% \caption{Master resutls table comparing results for all of the classifiers run in this work. For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}
+%% \caption{Master results table comparing results for all of the classifiers run in this work. For each task and classifier, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}
 %\ra{1.3}
 %%\hskip-4.0cm
 %\begin{tabular}{@{}rrrrrcrrrr@{}} \toprule
@@ -484,7 +484,7 @@ At a first glance there are some notable results exposed in this table.
 \subsection{Runtime Performance}\label{subsec:master_table_runtime}
 
 It is clear that the Naive Bayes algorithms outperforms all other models in runtime and, in some cases, this improvement is in orders of magnitude.
-The algorithm's worst performance for all problems is of two minutes whilst the best runtime for any other classifier is for the Random Forest, with 19 minutes of runtime for the problem of labeling users that travelled out of the endemic region, yet only for a subset of the users base: namely those users which are currently settled outside of the endemic region.
+The algorithm's worst performance for all problems is of two minutes whilst the best runtime for any other classifier is for the Random Forest, with 19 minutes of runtime for the problem of labeling users that traveled out of the endemic region, yet only for a subset of the users base: namely those users which are currently settled outside of the endemic region.
 
 The Naive Bayes algorithm's runtime shows a strong difference with the Logistic Regression which was the slowest method overall, with the fastest runtime for all problems being greater than an hour and a half.
 Having the Logistic Regression as the slowest performing algorithm may be surprising to the reader.
@@ -601,19 +601,5 @@ The other effective tasks were the prediction of users that migrated in any dire
 % with the best estimator, with the lowest metric starting at a value of 0.958.
 % These results can be explained by the fact that
 % %Scores results become less surprising when looking closer at the dataset.
-%
-%Si del test\_set ahora me quedo con lo user's que Y\_target ==1 == EPIDEMIC\_gt pero que hoy en dia son epidemic ==0 (se mudaron)s
- % scores bajan mucho:
-%
-%+--------------+-----------------+-------+
-%| target\_label | predicted\_label | count |
-%+--------------+-----------------+-------+
-%|   1    |    1    | 1944 |
-%|   1    |    0    | 3525 |
-%+--------------+-----------------+-------+
-%'f1\_score': 0.5244840145690004, ''accuracy': 0.3554580,, 'precision': 1.0, 'recall': 0.35545803,
-
-% \section{Key Results}
-
 
 
